--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -197,12 +197,9 @@
                             <li><a class="dropdown-item" href="{{ url_for('accounts.list') }}">
                                 <i class="fas fa-users me-2"></i>账户管理
                             </a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('accounts.history') }}">
-                                <i class="fas fa-history me-2"></i>同步历史
-                            </a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('accounts.sync_report') }}">
-                                <i class="fas fa-chart-line me-2"></i>同步报告
-                            </a></li>
+                <li><a class="dropdown-item" href="{{ url_for('accounts.sync_records') }}">
+                    <i class="fas fa-history me-2"></i>同步记录
+                </a></li>
                             <li><a class="dropdown-item" href="{{ url_for('account_classification.index') }}">
                                 <i class="fas fa-tags me-2"></i>账户分类管理
                             </a></li>
